# trilodocx

./: Makefile  README.md  client2_ae.docx  pyproject.toml
app/: __init__.py  main.py
tests/: conftest.py  test_sae_summary.py
