[project]
name = "trilodocx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
